Inline-block for featured partner icons. Need to fix alignment.

--- a/stylus/require/front-page.styl
+++ b/stylus/require/front-page.styl
@@ -15,13 +15,17 @@ body
             width 80vw
             margin 0 auto 8%
             padding 0
-            display flex
-            justify-content space-around
+            text-align justify
+
+            &:after
+                content ''
+                width 100%
+                display inline-block
 
             li
-                flex 1
                 max-width 15rem
                 margin 2rem
+                display inline-block
 
                 img
                     border-radius 0
