--- a/stylus/style.css
+++ b/stylus/style.css
@@ -598,13 +598,17 @@ body.home ul.wt_featured-partners {
   width: 80vw;
   margin: 0 auto 8%;
   padding: 0;
-  display: flex;
-  justify-content: space-around;
+  text-align: justify;
+}
+body.home ul.wt_featured-partners:after {
+  content: '';
+  width: 100%;
+  display: inline-block;
 }
 body.home ul.wt_featured-partners li {
-  flex: 1;
   max-width: 15rem;
   margin: 2rem;
+  display: inline-block;
 }
 body.home ul.wt_featured-partners li img {
   border-radius: 0;
